<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/app_name">
        <EditTextPreference
            android:key="@string/pref_task_title_key"
            android:summary="@string/default_title_description"
            android:title="@string/default_title"/>

        <EditTextPreference
            android:key="@string/pref_default_time_from_now_key"
            android:summary="@string/minutes_from_now_description"
            android:title="@string/minutes_from_now"/>
        <RingtonePreference
            android:key="@string/tone_default_key"
            android:summary="@string/tone_description"
            android:title="@string/tone"
            android:ringtoneType="notification"
            />

    </PreferenceCategory>

</PreferenceScreen>
