<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <ImageView
            android:id="@+id/image"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:minHeight="?android:actionBarSize"
            android:adjustViewBounds="true"
            android:layout_alignParentTop="true"/>

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/gutter"
            android:layout_marginEnd="@dimen/gutter"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/image"
            android:hint="@string/title"/>


        <TextView
            style="@android:style/TextAppearance.Medium"
            android:id="@+id/task_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_alignEnd="@id/title"
            android:layout_marginEnd="3dp"/>

        <TextView
            style="@android:style/TextAppearance.Medium"
            android:id="@+id/task_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/task_time"
            android:layout_alignBottom="@id/task_time"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:id="@+id/setTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/task_date"
            android:layout_alignBottom="@id/task_time"
            android:layout_marginEnd="10dp"
            android:text="@string/set_date_and_time"/>

        <EditText
            android:id="@+id/notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/title"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="@dimen/gutter"
            android:layout_below="@id/task_time"
            android:hint="@string/notes"
            android:gravity="top"
            android:minLines="5"/>

    </RelativeLayout>

</ScrollView>